[gd_scene load_steps=31 format=3 uid="uid://dagygwqcpjahy"]

[ext_resource type="Script" path="res://Scripts/Dialogo.gd" id="2_6btu7"]
[ext_resource type="FontFile" uid="uid://cuvbydnpy5d32" path="res://Fonts/Planet Comic.otf" id="3_g8x8e"]
[ext_resource type="FontFile" uid="uid://ceot41yfkopgt" path="res://Fonts/LT Crafted.otf" id="3_m4qun"]
[ext_resource type="Texture2D" uid="uid://dca6j5k8lsu3w" path="res://Sprites/Game/Icon.png" id="4_5daxm"]
[ext_resource type="Texture2D" uid="uid://cgm6808unqajs" path="res://Sprites/Game/perro1.png" id="4_hdgnm"]
[ext_resource type="Texture2D" uid="uid://wn1x65e1xg03" path="res://Sprites/Game/Dialogo.png" id="5_bs1wo"]
[ext_resource type="PackedScene" uid="uid://cejykutun8cyu" path="res://Pref/card.tscn" id="6_fg0nq"]
[ext_resource type="Script" path="res://Scenes/UIControl.gd" id="6_uip2p"]
[ext_resource type="Texture2D" uid="uid://cqxt4h4rddvm7" path="res://Sprites/Game/Dialogo1.png" id="6_wvhjh"]
[ext_resource type="Texture2D" uid="uid://dw4wa5boc1y8q" path="res://Sprites/Game/pintura/pintura1.png" id="9_iq6e5"]
[ext_resource type="AudioStream" uid="uid://df775ro84gjqx" path="res://Audio/MexicoslowSong.wav" id="10_4om77"]
[ext_resource type="Script" path="res://Scenes/MenuControl.gd" id="10_phr34"]
[ext_resource type="Texture2D" uid="uid://dus17qs5fmeb8" path="res://Sprites/Game/pantallas/ajustes/Slider.png" id="12_qg823"]
[ext_resource type="Texture2D" uid="uid://deghgrw5j3gwo" path="res://Sprites/Game/pantallas/ajustes/BotonSalir.png" id="13_8tfli"]
[ext_resource type="Texture2D" uid="uid://opgmi58801bc" path="res://Sprites/Menu.png" id="13_43ea1"]
[ext_resource type="Texture2D" uid="uid://dyyh5oeb5d8rw" path="res://Sprites/Game/pantallas/ajustes/BotonSalirPressed.png" id="14_41rjn"]
[ext_resource type="Texture2D" uid="uid://ox6hgmyn1cyd" path="res://Sprites/Game/pantallas/principal/Recurso 2.png" id="16_bxugx"]
[ext_resource type="Texture2D" uid="uid://bqg80yu58fsob" path="res://Sprites/Game/pantallas/principal/creditos1.png" id="17_rsxhu"]

[sub_resource type="Animation" id="Animation_5vsnk"]
resource_name = "Historia"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_08jib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shkf0"]
_data = {
"Historia": SubResource("Animation_5vsnk"),
"RESET": SubResource("Animation_08jib")
}

[sub_resource type="Animation" id="Animation_47shc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qkekg"]
resource_name = "ShakePic"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2y8h"]
_data = {
"RESET": SubResource("Animation_47shc"),
"ShakePic": SubResource("Animation_qkekg")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k356h"]
content_margin_left = 24.0
color = Color(0.34902, 0.305882, 0.25098, 1)
thickness = 40

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fl7k8"]
color = Color(0.956863, 0.921569, 0.843137, 1)
thickness = 40

[sub_resource type="Animation" id="Animation_7cyjn"]
resource_name = "CloseMenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.2), Vector2(1, 1.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -1776)]
}

[sub_resource type="Animation" id="Animation_yinyq"]
resource_name = "OpenMenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1776), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ehvfy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1776)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8v7a8"]
_data = {
"CloseMenu": SubResource("Animation_7cyjn"),
"OpenMenu": SubResource("Animation_yinyq"),
"RESET": SubResource("Animation_ehvfy")
}

[node name="Chemtective" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_vertical_guides_ = []

[node name="Game" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_6btu7")
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tablero" type="ColorRect" parent="Game/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.537255, 0.537255, 0.490196, 1)

[node name="CircleC" type="TextureRect" parent="Game/Panel/Tablero"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.023
anchor_top = 0.112
anchor_right = 0.023
anchor_bottom = 0.112
offset_left = 0.159998
offset_top = -128.288
offset_right = 256.16
offset_bottom = 127.712
texture = ExtResource("4_5daxm")

[node name="DialogBase" type="TextureRect" parent="Game/Panel/Tablero/CircleC"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_top = 0.552
anchor_bottom = 0.552
offset_left = 213.0
offset_top = -156.312
offset_right = 725.0
offset_bottom = -28.312
scale = Vector2(1.762, 2.442)
texture = ExtResource("5_bs1wo")

[node name="Char" type="TextureRect" parent="Game/Panel/Tablero/CircleC"]
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 46.0
offset_top = 46.0
offset_right = 558.0
offset_bottom = 558.0
scale = Vector2(0.314813, 0.314813)
texture = ExtResource("4_hdgnm")

[node name="ParteSup" type="ColorRect" parent="Game/Panel/Tablero"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.22
color = Color(0.537255, 0.537255, 0.490196, 1)

[node name="ParteSup2" type="ColorRect" parent="Game/Panel/Tablero"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.537255, 0.537255, 0.490196, 1)

[node name="Cartas" type="ColorRect" parent="Game/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
offset_top = 33.0
offset_bottom = 36.3447
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.215686, 1)

[node name="bankCard" parent="Game/Panel" instance=ExtResource("6_fg0nq")]
modulate = Color(0.741176, 0.741176, 0.741176, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="currentCard" parent="Game/Panel" instance=ExtResource("6_fg0nq")]
z_index = 1
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.219
anchor_right = 1.0
anchor_bottom = 0.797
offset_left = 540.0
offset_top = 512.544
offset_right = -540.0
offset_bottom = -541.728
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Front" parent="Game/Panel/currentCard" index="1"]
position = Vector2(22, 508)

[node name="Content" parent="Game/Panel/currentCard/Front" index="0"]
position = Vector2(-15.7908, -502.791)
scale = Vector2(0.846, 0.846)
texture = ExtResource("4_hdgnm")

[node name="RespDer" parent="Game/Panel/currentCard/Front/Content" index="0"]
z_index = 9
z_as_relative = false
position = Vector2(231.431, -219.711)
scale = Vector2(0.88, 0.88)
texture = ExtResource("6_wvhjh")

[node name="txtRespDer" parent="Game/Panel/currentCard/Front/Content/RespDer" index="0"]
z_index = 9
z_as_relative = false
offset_top = -235.34
offset_bottom = -235.588
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.309804, 0.278431, 0.239216, 1)
theme_override_fonts/normal_font = ExtResource("3_m4qun")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="RespIzq" parent="Game/Panel/currentCard/Front/Content" index="1"]
z_index = 9
z_as_relative = false
position = Vector2(-245.322, -219.805)
scale = Vector2(0.88, 0.88)
texture = ExtResource("6_wvhjh")

[node name="txtRespIzq" parent="Game/Panel/currentCard/Front/Content/RespIzq" index="0"]
z_index = 9
z_as_relative = false
offset_top = -232.961
offset_bottom = -233.209
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.309804, 0.278431, 0.239216, 1)
theme_override_fonts/normal_font = ExtResource("3_m4qun")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Dialogo1" type="RichTextLabel" parent="Game/Panel"]
z_index = 7
layout_mode = 1
anchors_preset = -1
anchor_left = 0.299
anchor_top = 0.12
anchor_right = 0.299
anchor_bottom = 0.12
offset_left = 0.0799866
offset_top = -124.88
offset_right = 713.08
offset_bottom = 123.12
theme_override_colors/default_color = Color(0.109804, 0.101961, 0.0745098, 1)
theme_override_fonts/normal_font = ExtResource("3_m4qun")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
visible_characters = 0
visible_ratio = 0.0
text_direction = 3

[node name="DiagAnim" type="AnimationPlayer" parent="Game/Panel/Dialogo1"]
libraries = {
"": SubResource("AnimationLibrary_shkf0")
}

[node name="DialogResp" type="TextureRect" parent="Game/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -534.0
offset_top = -326.0
offset_right = 72.0
offset_bottom = -198.0
scale = Vector2(1.762, 2.442)
texture = ExtResource("5_bs1wo")
flip_h = true

[node name="Respuesta" type="RichTextLabel" parent="Game/Panel/DialogResp"]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.124
anchor_top = 0.109
anchor_right = 0.906
anchor_bottom = 0.891
offset_left = -0.144005
offset_top = 0.0479994
offset_right = 461.964
offset_bottom = 98.952
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0.109804, 0.101961, 0.0745098, 1)
theme_override_fonts/normal_font = ExtResource("3_g8x8e")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "sadsadas"
scroll_active = false
text_direction = 2

[node name="Pintura" type="TextureRect" parent="Game/Panel"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.991
offset_left = -308.0
offset_top = 15.7999
offset_right = 312.0
offset_bottom = 0.416016
pivot_offset = Vector2(310, 167)
texture = ExtResource("9_iq6e5")

[node name="PicSound" type="AudioStreamPlayer" parent="Game/Panel/Pintura"]

[node name="PicAnim" type="AnimationPlayer" parent="Game/Panel/Pintura"]
libraries = {
"": SubResource("AnimationLibrary_f2y8h")
}

[node name="Sonidos" type="AudioStreamPlayer" parent="Game"]
pitch_scale = 1.61

[node name="DarkMode" type="Panel" parent="Game"]
self_modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGSound" type="AudioStreamPlayer" parent="Game"]
stream = ExtResource("10_4om77")
volume_db = -15.0
autoplay = true

[node name="IU" type="Control" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_uip2p")

[node name="Menu" type="Control" parent="IU"]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1776.0
offset_bottom = -1776.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_phr34")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="TextureRect" parent="IU/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_43ea1")

[node name="Panel" type="Panel" parent="IU/Menu/ColorRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolText" type="RichTextLabel" parent="IU/Menu/ColorRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 153.0
offset_top = 524.0
offset_right = -314.0
offset_bottom = -1268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.956863, 0.894118, 0.764706, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.105882, 0.0627451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("3_m4qun")
theme_override_font_sizes/normal_font_size = 80
text = "Volumen "

[node name="volSlider" type="HSlider" parent="IU/Menu/ColorRect/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.388
anchor_right = 0.856
anchor_bottom = 0.557
offset_left = 30.0
offset_top = -220.96
offset_right = 362.52
offset_bottom = -80.4401
scale = Vector2(0.696998, 0.696998)
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("12_qg823")
theme_override_icons/grabber_highlight = ExtResource("12_qg823")
theme_override_styles/slider = SubResource("StyleBoxLine_k356h")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_fl7k8")
value = 100.0

[node name="MenuText" type="RichTextLabel" parent="IU/Menu/ColorRect/Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.078
anchor_right = 0.5
anchor_bottom = 0.172
offset_left = -215.0
offset_top = 22.24
offset_right = 211.0
offset_bottom = 18.76
grow_vertical = 0
pivot_offset = Vector2(210, 80)
theme_override_colors/default_color = Color(0.956863, 0.894118, 0.764706, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.105882, 0.0627451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("3_m4qun")
theme_override_font_sizes/normal_font_size = 150
text = "Menu"
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
text_direction = 3

[node name="TextureButton" type="TextureButton" parent="IU/Menu/ColorRect/Panel"]
layout_mode = 0
offset_left = 281.0
offset_top = 1301.0
offset_right = 793.0
offset_bottom = 1429.0
texture_normal = ExtResource("13_8tfli")
texture_pressed = ExtResource("14_41rjn")

[node name="btnCredits" type="TextureButton" parent="IU/Menu/ColorRect/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.083
anchor_bottom = 0.083
offset_left = 880.0
offset_top = -105.36
offset_right = 1071.0
offset_bottom = 213.64
scale = Vector2(0.741655, 0.741655)
texture_normal = ExtResource("16_bxugx")
texture_pressed = ExtResource("17_rsxhu")

[node name="MenuAnim" type="AnimationPlayer" parent="IU/Menu"]
libraries = {
"": SubResource("AnimationLibrary_8v7a8")
}

[node name="AudioMenu" type="AudioStreamPlayer" parent="IU/Menu"]
pitch_scale = 2.34

[node name="Menu2" type="Control" parent="IU"]
visible = false
z_index = 10
layout_mode = 1
anchor_top = -0.925
anchor_bottom = 0.075
offset_right = 1080.0
offset_bottom = 3840.0
grow_horizontal = 2
script = ExtResource("10_phr34")

[node name="ColorRect" type="TextureRect" parent="IU/Menu2"]
visible = false
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_43ea1")

[node name="MenuAnim" type="AnimationPlayer" parent="IU/Menu2"]
libraries = {
"": SubResource("AnimationLibrary_8v7a8")
}

[connection signal="resized" from="Game" to="Game" method="_on_resized"]
[connection signal="value_changed" from="IU/Menu/ColorRect/Panel/volSlider" to="IU/Menu" method="_on_vol_slider_value_changed"]
[connection signal="pressed" from="IU/Menu/ColorRect/Panel/TextureButton" to="IU/Menu" method="_on_texture_button_pressed"]
[connection signal="pressed" from="IU/Menu/ColorRect/Panel/btnCredits" to="Game" method="_on_btn_credits_pressed"]

[editable path="Game/Panel/currentCard"]
